<resources>
    <string name="app_name">Inventory App</string>
    <string name="default_product_name">Product</string>
    <string name="default_supplier_name">Supplier</string>
    <string name="dbg_db_raw_id">Row id:</string>
    <string name="dbg_db_unknown_uri">Cannot query unknown URI</string>
    <string name="dbr_db_insertion_unsupported">Insertion is not supported for</string>
    <string name="dbg_db_invalid_product_name">Product requires a name</string>
    <string name="dbg_db_invalid_product_price">Product requires valid price</string>
    <string name="dbg_db_invalid_product_quantity">Product requires valid quantity</string>
    <string name="dbg_db_invalid_supplier_name">Product requires a supplier\'s name</string>
    <string name="dbg_db_invalid_supplier_phone">Product requires a supplier\'s phone</string>
    <string name="dbr_db_failed_raw_insertion">Failed to insert row for</string>
    <string name="dbg_db_updating_not_available">Update is not supported for</string>
    <string name="dbg_db_deletion_not_available">Deletion is not supported for</string>
    <string name="default_product_price">$100</string>
    <string name="default_product_quantity">30</string>
    <string name="product_buy">Buy</string>
    <string name="default_supplier_phone">+18001234576</string>
    <string name="label_product_name">Product name</string>
    <string name="label_product_price">Price of the product</string>
    <string name="label_product_quantity">Quantity of the product</string>
    <string name="label_supplier_name">Supplier name</string>
    <string name="label_supplier_phone">Phone number of the supplier</string>
    <string name="template_product_price">$%d</string>
    <string name="template_product_quantity">Left: %d</string>
    <string name="toast_saving_product_failed">Product has not been saved</string>
    <string name="toast_saving_product_successful">Product has been saved</string>
    <string name="toast_product_is_over">This product is over</string>
    <string name="button_add_new_product">Add new product</string>
    <string name="button_edit_product">Confirm changes</string>
    <string name="editor_activity_title_new_product">Adding of a new product</string>
    <string name="editor_activity_title_edit_product">Editing of the product</string>
    <string name="unsaved_changes_dialog_msg">You can lost all entered data</string>
    <string name="unsaved_changes_dialog_discard">Cancel editing</string>
    <string name="unsaved_changes_dialog_keep_editing">Return to editing</string>
    <string name="unsaved_deleting_dialog_discard">Cancel deleting</string>
    <string name="unsaved_deleting_dialog_keep_editing">Delete anyway</string>
    <string name="detail_activity_title">Product details</string>
    <string name="detail_activity_edit_button">Edit the product</string>
    <string name="increase_quantity">+</string>
    <string name="decrease_quantity">-</string>
    <string name="call_to_supplier">Call...</string>
    <string name="toast_permissions_granted">All permissions are granted</string>
    <string name="no_products">No products are in the Database</string>
</resources>
