<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:orientation="vertical"
        tools:context=".activities.AddInventoryActivity">

        <TextView
            android:id="@+id/new_product_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_product_name" />

        <EditText
            android:id="@+id/new_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_product_name"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/label_product_price" />

        <EditText
            android:id="@+id/new_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_product_price"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/label_product_quantity" />

        <EditText
            android:id="@+id/new_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_product_quantity"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/label_supplier_name" />

        <EditText
            android:id="@+id/new_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_supplier_name"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/label_supplier_phone" />

        <EditText
            android:id="@+id/new_supplier_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_supplier_phone"
            android:inputType="phone" />

        <Button
            android:id="@+id/new_product_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/button_add_new_product"/>

    </LinearLayout>

</ScrollView>